# ansible-role-mongodb-repo

./: .ansible-lint-ignore  .talismanrc  Makefile  README.md  pyproject.toml
.github/workflows/: lint.yml  molecule.yml  release.yml
defaults/: main.yml
meta/: main.yml
molecule/default/: converge.yml  molecule.yml  verify.yml
tasks/: main.yml
