[tool.poetry]
name = "nephelaiio.mongodb_repo"
version = "0.1.0"
description = ""
authors = ["nephelaiio"]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
netaddr = "^0.9.0"
yamllint = "^1.27.1"
MarkupSafe = "2.0.1"
ansible-lint = { version = "*", markers = "platform_system != 'Windows'" }
docker = "^6.1.3"
ansible = "^8.2.0"
ansible-compat = "^4.1.10"
molecule = "^6.0.2"
molecule-docker = "^2.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
