[tool.poetry]
name = "nephelaiio.mongodb_repo"
version = "0.1.0"
description = ""
authors = ["nephelaiio"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
netaddr = "^1.3.0"
yamllint = "^1.35.1"
markupsafe = "^3.0.2"
ansible-lint = "^25.1.2"
ansible = "^11.2.0"
ansible-compat = "^25.1.2"
molecule = "^25.2.0"
molecule-plugins = "^23.7.0"
docker = "^7.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
